# rust-service-template

./: Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.v2  README.md  build.rs
client/: Cargo.toml
client/src/: lib.rs
generated_proto/: Cargo.toml
generated_proto/src/: lib.rs
proto/: example.proto
server/: Cargo.toml
server/src/: Cargo.toml  lib.rs  main.rs  settings_model.rs
server/src/app/: app_ctx.rs
server/src/services/: example_service.rs
src/: application.rs  configuration.rs  lib.rs  main.rs  server.rs  settings_model.rs
src/app/: app_ctx.rs  mod.rs
src/domain/: database.rs  mod.rs  request_counter.rs
src/generated_proto/: rust_grpc_service.rs
src/services/: example_service.rs  mod.rs
src/telemetry/: elastic_layer.rs  elastic_sink.rs  formatting_layer.rs  mod.rs  telemetry.rs
