[package]
name = "rust-service-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-service-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Runtime
tokio = { version = "*", features = ["full"] }

#HTTP
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
serde_yaml = "*"