[package]
name = "rust-service-template-client"
version = "0.1.0"
authors = ["Simpl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.0"
prost = "0.11.0"

rust-service-template-generated-proto = { path = "../generated_proto" }